[gd_scene load_steps=14 format=2]

[ext_resource path="res://juegodetriangulos/res/scripts/menus/main_menu.gd" type="Script" id=1]
[ext_resource path="res://juegodetriangulos/res/themes/main_menu_button.tres" type="StyleBox" id=2]
[ext_resource path="res://juegodetriangulos/res/sprites/misc/main_screen_bg_animations/main_screen_bg2.png" type="Texture" id=6]
[ext_resource path="res://juegodetriangulos/res/sprites/misc/main_screen_bg_animations/main_screen_bg1.png" type="Texture" id=7]
[ext_resource path="res://juegodetriangulos/res/sprites/misc/main_screen_bg_animations/main_screen_bg0.png" type="Texture" id=8]
[ext_resource path="res://juegodetriangulos/res/sprites/ui/hud/settings_icon.png" type="Texture" id=9]
[ext_resource path="res://juegodetriangulos/res/sprites/ui/hud/exit_icon.png" type="Texture" id=10]
[ext_resource path="res://juegodetriangulos/res/music/Select.wav" type="AudioStream" id=11]
[ext_resource path="res://juegodetriangulos/res/music/main_menu.mp3" type="AudioStream" id=12]
[ext_resource path="res://juegodetriangulos/res/themes/standard_large.tres" type="Theme" id=13]
[ext_resource path="res://juegodetriangulos/res/themes/standard_medium.tres" type="Theme" id=14]
[ext_resource path="res://juegodetriangulos/res/sprites/ui/hud/stats.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="main_menu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 286.0
margin_top = -170.0
margin_right = 474.0
margin_bottom = 103.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="normal" type="Button" parent="main_menu"]
margin_top = 63.0
margin_right = 188.0
margin_bottom = 109.0
theme = ExtResource( 14 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Normal"

[node name="hard" type="Button" parent="main_menu"]
margin_top = 113.0
margin_right = 188.0
margin_bottom = 159.0
theme = ExtResource( 14 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Hard"

[node name="hardest" type="Button" parent="main_menu"]
margin_top = 163.0
margin_right = 188.0
margin_bottom = 209.0
theme = ExtResource( 14 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Hardest"

[node name="extra_challenges" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 139.21
margin_top = 661.698
margin_right = 639.21
margin_bottom = 761.698
theme = ExtResource( 14 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Extra challenges"

[node name="begin" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = 20.0
margin_right = 25.0
margin_bottom = 40.0
text = "Begin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blink_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="unblink_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="options" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -220.0
margin_top = -225.0
margin_right = -20.0
margin_bottom = -25.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 9 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -220.0
margin_top = 25.0
margin_right = -20.0
margin_bottom = 225.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 10 )
expand_icon = true

[node name="stats" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1700.0
margin_top = -620.0
margin_right = 1900.0
margin_bottom = -420.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 16 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_game" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -75.0
margin_right = 965.0
margin_bottom = 75.0
theme = ExtResource( 13 )
text = "Start game"
align = 1
valign = 1

[node name="animated_bg" type="AnimatedSprite" parent="."]
light_mask = 128
position = Vector2( 512.842, 577.814 )
z_index = -10
frames = SubResource( 1 )
frame = 2
playing = true

[node name="game_start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Effects"

[node name="main_menu_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "BGM"

[connection signal="mouse_entered" from="main_menu/normal" to="." method="_on_normal_mouse_entered"]
[connection signal="pressed" from="main_menu/normal" to="." method="_on_normal_pressed"]
[connection signal="mouse_entered" from="main_menu/hard" to="." method="_on_hard_mouse_entered"]
[connection signal="pressed" from="main_menu/hard" to="." method="_on_hard_pressed"]
[connection signal="mouse_entered" from="main_menu/hardest" to="." method="_on_hardest_mouse_entered"]
[connection signal="pressed" from="main_menu/hardest" to="." method="_on_hardest_pressed"]
[connection signal="pressed" from="extra_challenges" to="." method="_on_extra_challenges_pressed"]
[connection signal="pressed" from="begin" to="." method="_on_begin_pressed"]
[connection signal="timeout" from="blink_timer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="unblink_timer" to="." method="_on_unblink_timer_timeout"]
[connection signal="mouse_entered" from="options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="stats" to="." method="_on_stats_pressed"]
